--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 certifi==2017.7.27.1
 chardet==3.0.4
+click==6.7
+-e git+git@github.com:emersonmx/godot-ide-helper.git@15ecfe4e98b85e18b389ee2467547f510a3cd049#egg=godot_ide_helper
 idna==2.6
 requests==2.18.4
 urllib3==1.22
